--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@ img {
    background-color: ;
 }
 
-img.medium {
+img.one, img.two, img.three, img.four, img.five,
+img.six, img.seven, img.eight, img.nine, img.ten,
+img.eleven, img.twelve, img.thirteen, img.fourteen,
+img.fifteen, img.sixteen, img.seventeen, img.eighteen, img.nineteen, img.twenty {
    width: 300px;
    height: 300px;
+   float: left;
 }
