--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@ img {
    background-color: ;
 }
 
-img.one, img.two, img.three, img.four, img.five,
-img.six, img.seven, img.eight, img.nine, img.ten,
-img.eleven, img.twelve, img.thirteen, img.fourteen,
-img.fifteen, img.sixteen, img.seventeen, img.eighteen, img.nineteen, img.twenty {
+.pictures {
    width: 300px;
    height: 300px;
    float: left;
