--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 img {
-   background-color: ;
+  background-color: ;
 }
 
-.pictures {
-   width: 300px;
-   height: 300px;
-   float: left;
+.rndOne {
+  float: left;
+}
+
+.picture {
+  width: 300px;
+  height: 300px;
+  float: left;
+}
+
+.form {
+  float: left;
 }
