--- a/style.css
+++ b/style.css
@@ -2,14 +2,11 @@ img {
   background-color: ;
 }
 
-
-
-
 .form {
   float: left;
 }
 
-.picture {
+.pictures {
   width: 300px;
   height: 300px;
   float: left;
